[gd_scene load_steps=10 format=3 uid="uid://cyqntj413e1px"]

[ext_resource type="Script" path="res://level.gd" id="1_fvswx"]
[ext_resource type="AudioStream" uid="uid://dlw36j2fbjq6p" path="res://Assets/Audio/Music/Relaxing E-Coli.mp3" id="3_h4iut"]
[ext_resource type="PackedScene" uid="uid://bsyldo33lixi2" path="res://NPC.tscn" id="3_ieeyi"]
[ext_resource type="PackedScene" uid="uid://i5jui61lwf3a" path="res://Pickup.tscn" id="4_80kkt"]
[ext_resource type="PackedScene" uid="uid://kf7rkxnbchm0" path="res://Enchantments/Nodes/helix.tscn" id="5_34u14"]
[ext_resource type="PackedScene" uid="uid://bqc6ck631cqrr" path="res://Enchantments/Nodes/double_trouble.tscn" id="6_5kuug"]

[sub_resource type="Environment" id="Environment_7cvnc"]

[sub_resource type="PlaneMesh" id="PlaneMesh_s3vur"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_d3oby"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_d7a6e"]
streams_count = 4
stream_0/stream = ExtResource("3_k7mqm")
stream_0/weight = 1.0
stream_1/stream = ExtResource("4_rn81c")
stream_1/weight = 1.0
stream_2/stream = ExtResource("5_w5a5c")
stream_2/weight = 1.0
stream_3/stream = ExtResource("3_h4iut")
stream_3/weight = 1.0

[node name="Node3D" type="Node3D"]
script = ExtResource("1_fvswx")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_7cvnc")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.884076, 0.467344, 0, -0.467344, 0.884076, -0.0915654, 0.673904, 2.90774)
light_energy = 1.952
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, -1.33418, 0)
mesh = SubResource("PlaneMesh_s3vur")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
shape = SubResource("WorldBoundaryShape3D_d3oby")

[node name="NPC" parent="." instance=ExtResource("3_ieeyi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.39944)
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 512.0
offset_top = 265.0
offset_right = -512.0
offset_bottom = -264.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="AddressEntry" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Address to Join"
alignment = 1

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn")
spawn_path = NodePath("..")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_d7a6e")
autoplay = true

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="spawned" from="MultiplayerSpawner" to="." method="_on_multiplayer_spawner_spawned"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
[node name="Player" parent="GUI" instance=ExtResource("1_lin1h")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.60904, 1.57629, 0.819533)

[node name="MeshInstance3D2" parent="." instance=ExtResource("4_80kkt")]
transform = Transform3D(0.999999, 0, 0, 0, 0.999999, 0, 0, 0, 1, 2.58305, -0.33418, 2.98232)

[node name="Enchant" type="Node3D" parent="MeshInstance3D2"]

[node name="Helix" parent="MeshInstance3D2/Enchant" instance=ExtResource("5_34u14")]

[node name="MeshInstance3D3" parent="." instance=ExtResource("4_80kkt")]
transform = Transform3D(0.999999, 0, 0, 0, 0.999999, 0, 0, 0, 1, 2.58305, -0.33418, -1.33371)

[node name="Enchant" type="Node3D" parent="MeshInstance3D3"]

[node name="Double Trouble" parent="MeshInstance3D3/Enchant" instance=ExtResource("6_5kuug")]
